# python-base

./: .editorconfig  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.dev.ini  config.ini  main.py  pyproject.toml  secret.ini.example
{{cookiecutter.project_slug}}/tests/: test_config.py  test_example.py
{{cookiecutter.project_slug}}/utils/: cruft.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  config.py  example.py  main.py
