[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.package_name }}"}]

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.main:main"
cruft-update = "utils.cruft:update"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
{% if cookiecutter.use_pytest == 'y' -%}
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
{% endif -%}
{% if cookiecutter.use_black == 'y' -%}
black = "^25.1.0"
{% endif -%}
{% if cookiecutter.use_flake8 == 'y' -%}
flake8 = "^7.1.2"
{% endif -%}
{% if cookiecutter.use_mypy == 'y' -%}
mypy = "^1.15.0"
{% endif -%}
{% if cookiecutter.use_pre_commit == 'y' -%}
pre-commit = "^4.1.0"
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

{% if cookiecutter.use_black == 'y' -%}
[tool.black]
line-length = 88
target-version = ["py{{ cookiecutter.python_version.replace('.', '') }}"]
include = '\.pyi?$'
{%- endif %}

{% if cookiecutter.use_pytest == 'y' -%}
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
{%- endif %}
